--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@capacitor/android": "^8.1.0",
     "@capacitor/app": "^8.0.1",
     "@capacitor/core": "^8.1.0",
+    "@capacitor/keyboard": "^8.0.1",
+    "@capacitor/status-bar": "^8.0.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@yudiel/react-qr-scanner": "^2.5.0",
