--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.3",
+    "mongodb": "^7.1.0",
     "mongoose": "^7.5.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
