--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "canvas-confetti": "^1.9.4",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.34.1",
+    "jsmpeg-player": "^3.0.3",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.562.0",
