--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.1.0",
@@ -25,9 +26,11 @@
     "nodemailer": "^6.9.13",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
+    "rtsp-relay": "^1.9.0",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.9",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
